--- a/style.css
+++ b/style.css
@@ -3,3 +3,52 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.preload {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: #77b3d4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cloud1,
+.cloud2,
+.cloud3 {
+    height: 100px;
+    position: absolute;
+    right: 0%;
+}
+
+.cloud1 {
+    top: 25%;
+    transform: translate(100%, -25%);
+}
+.cloud2 {
+    top: 50%;
+    transform: translate(100%, -50%);
+}
+.cloud3 {
+    top: 75%;
+    transform: translate(100%, -75%);
+}
+
+.airplane {
+    height: 200px;
+}
+.preload h3 {
+    position: absolute;
+    top: 75%;
+    transform: translateY(-75%);
+    color: white;
+    font: 30px;
+    font-family: sans-serif;
+}
+
+section img {
+    width: 100%;
+    height: 200px;
+}
