--- a/style.css
+++ b/style.css
@@ -21,23 +21,28 @@
     height: 100px;
     position: absolute;
     right: 0%;
+    z-index: -1;
 }
 
 .cloud1 {
     top: 25%;
     transform: translate(100%, -25%);
+    animation: clouds 3s infinite;
 }
 .cloud2 {
     top: 50%;
     transform: translate(100%, -50%);
+    animation: clouds 3s infinite 2s;
 }
 .cloud3 {
     top: 75%;
     transform: translate(100%, -75%);
+    animation: clouds 3s infinite 1.5s;
 }
 
 .airplane {
     height: 200px;
+    animation: airplane 1s infinite  alternate;
 }
 .preload h3 {
     position: absolute;
@@ -51,4 +56,22 @@
 section img {
     width: 100%;
     height: 200px;
+}
+
+@keyframes airplane{
+    form{ 
+        transform: translateY(0px);
+    }
+    to{
+        transform: translateY(50px);
+    }
+}
+
+@keyframes clouds{
+    form {
+        right: 0%;
+    }
+    to {
+        right: 130%;
+    }
 }
